--- a/_config.yml
+++ b/_config.yml
@@ -13,7 +13,7 @@ timezone: 'Asia/Shanghai'
 
 # URL
 ## If your site is put in a subdirectory, set url as 'http://yoursite.com/child' and root as '/child/'
-url: https://sc.101jc.com
+url: https://memo.101jc.com
 root: /
 permalink: :name.html
 permalink_defaults:
