添加了植筋拉拔备忘录

--- a/themes/coo/_config.yml
+++ b/themes/coo/_config.yml
@@ -4,6 +4,7 @@ recent_posts_limits: 4
 # The categories and order displayed on the home page
 index_categories:
   - 常规检测
+  - 建筑结构
 
 # Home recommended posts
 index_recommends:
